# FECS

./: .clang-format  CMakeLists.txt  README.md  main.cpp
res/: test.inp
src/fem/boundary/: Boundary.cpp  Boundary.h  Force.cpp  Force.h
src/fem/elements/: Element.cpp  Element.h  Element_C2D3.h  Element_T2D2.h  Node.cpp  Node.h
src/fem/reader/: Errors.h  Reader.cpp  Reader.h  ReaderParseElements.cpp  ReaderParseInit.cpp  ReaderParseNodes.cpp
src/fem/step/: StaticStep.cpp  StaticStep.h  Step.cpp  Step.h
src/fem/system/: System.cpp  System.h
src/linear_algebra/matrix/: DenseMatrix.h  ListedMatrix.cpp  ListedMatrix.h  Matrix.h  Matrix3x3.cpp  Matrix3x3.h  SparseMatrix.cpp  SparseMatrix.h
src/linear_algebra/vector/: DenseVector.cpp  DenseVector.h
